Fixed #7961 - Scrollbar appears for the matrix with required question (at least in Safari)

--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -28,11 +28,13 @@
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-bottom" colspan="1" data-responsive-title="" title="">
 					<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0row0cell1_errors" role="alert">
 						<div>
-							<span aria-hidden="true">
-							</span>
-							<span>
-								<span class="sv-string-viewer">Response required.</span>
-							</span>
+							<div>
+								<span aria-hidden="true">
+								</span>
+								<span>
+									<span class="sv-string-viewer">Response required.</span>
+								</span>
+							</div>
 						</div>
 					</div>
 				</td>
