--- a/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
@@ -18,11 +18,13 @@
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" data-responsive-title="" title="">
 					<div aria-live="polite" class="sd-element__erbox sd-element__erbox--above-element sd-error sd-question__erbox sd-question__erbox--above-question" id="testid0row1cell1_errors" role="alert">
 						<div>
-							<span aria-hidden="true">
-							</span>
-							<span>
-								<span class="sv-string-viewer">Response required.</span>
-							</span>
+							<div>
+								<span aria-hidden="true">
+								</span>
+								<span>
+									<span class="sv-string-viewer">Response required.</span>
+								</span>
+							</div>
 						</div>
 					</div>
 				</td>
