--- a/tests/markup/snapshots/question-errors-v2-top.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-top.snap.html
@@ -2,11 +2,13 @@
 	<div class="sd-element sd-element--with-frame sd-question sd-question--error sd-question--error-top sd-question--title-top sd-row__question sd-row__question--small" data-name="name" id="testid0">
 		<div aria-live="polite" class="sd-element__erbox sd-element__erbox--above-element sd-error sd-question__erbox sd-question__erbox--above-question" id="testid0_errors" role="alert">
 			<div>
-				<span aria-hidden="true">
-				</span>
-				<span>
-					<span class="sv-string-viewer">Response required.</span>
-				</span>
+				<div>
+					<span aria-hidden="true">
+					</span>
+					<span>
+						<span class="sv-string-viewer">Response required.</span>
+					</span>
+				</div>
 			</div>
 		</div>
 		<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
