--- a/tests/markup/snapshots/multipletext-error-top-v2.snap.html
+++ b/tests/markup/snapshots/multipletext-error-top-v2.snap.html
@@ -4,11 +4,13 @@
 			<td class="sd-multipletext__cell sd-multipletext__cell--error sd-multipletext__cell--error-top">
 				<div aria-live="polite" class="sd-element__erbox sd-element__erbox--above-element sd-error sd-question__erbox sd-question__erbox--above-question" id="testid0_0_errors" role="alert">
 					<div>
-						<span aria-hidden="true">
-						</span>
-						<span>
-							<span class="sv-string-viewer">Response required.</span>
-						</span>
+						<div>
+							<span aria-hidden="true">
+							</span>
+							<span>
+								<span class="sv-string-viewer">Response required.</span>
+							</span>
+						</div>
 					</div>
 				</div>
 			</td>
