--- a/tests/markup/snapshots/question-errors-v2-bottom.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-bottom.snap.html
@@ -14,11 +14,13 @@
 		</div>
 		<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0_errors" role="alert">
 			<div>
-				<span aria-hidden="true">
-				</span>
-				<span>
-					<span class="sv-string-viewer">Response required.</span>
-				</span>
+				<div>
+					<span aria-hidden="true">
+					</span>
+					<span>
+						<span class="sv-string-viewer">Response required.</span>
+					</span>
+				</div>
 			</div>
 		</div>
 	</div>
