HTML Question type base class is not visible in Contrast Dark Theme Fixes #7223

--- a/tests/markup/snapshots/survey-navigation.snap.html
+++ b/tests/markup/snapshots/survey-navigation.snap.html
@@ -9,7 +9,7 @@
 						<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 							<div class="sv_q sv_qstn" data-name="q1" id="testid0">
 								<div role="presentation">
-									<div>
+									<div class="sv_q sv_qstn">
 										<div>
 										</div>
 									</div>
