Revert "HTML Question type base class is not visible in Contrast Dark Theme"
This reverts commit 885f5fb9c562c222a0e1548b271d272a80c34202.

--- a/tests/markup/snapshots/panel.snap.html
+++ b/tests/markup/snapshots/panel.snap.html
@@ -2,7 +2,7 @@
 	<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 		<div class="sv_q sv_qstn" data-name="question1" id="testid0">
 			<div role="presentation">
-				<div class="sv_q sv_qstn">HTML content here</div>
+				<div>HTML content here</div>
 			</div>
 		</div>
 	</div>
