--- a/tests/markup/snapshots/panel-swnl-v2.snap.html
+++ b/tests/markup/snapshots/panel-swnl-v2.snap.html
@@ -1,8 +1,8 @@
 <div class="sd-clearfix sd-row">
 	<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
-		<div class="sd-html sd-html--nested sd-question sd-question--html sd-row__question" data-name="question1" id="testid1">
+		<div class="sd-element--nested sd-question sd-question--html sd-row__question" data-name="question1" id="testid1">
 			<div class="sd-question__content" role="presentation">
-				<div class="sd-html sd-html--nested sd-question sd-question--html sd-row__question">HTML2</div>
+				<div class="sd-html">HTML2</div>
 			</div>
 		</div>
 	</div>
