#7978 - update markup classes and tests

--- a/tests/markup/snapshots/matrixdropdown-vertical.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-vertical.snap.html
@@ -1,5 +1,5 @@
 <div class="sd-table-wrapper">
-	<table class="sd-matrixdropdown sd-table sd-table--align-middle">
+	<table class="sd-matrixdropdown sd-table sd-table--align-middle sd-table--columnsautowidth">
 		<thead>
 			<tr>
 				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--header sd-table__cell--text">
