--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="sd-table-wrapper">
-		<table class="sd-matrixdynamic sd-table sd-table--has-footer">
+		<table class="sd-matrixdynamic sd-table sd-table--columnsautowidth sd-table--has-footer">
 			<thead>
 				<tr>
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
