#7978 - one more markup snapshot

--- a/tests/markup/snapshots/matrix-v2.snap.html
+++ b/tests/markup/snapshots/matrix-v2.snap.html
@@ -1,7 +1,7 @@
 <div class="sd-matrix sd-table-wrapper">
 	<fieldset>
 		<legend class="sv-hidden">matrix</legend>
-		<table class="sd-matrix__table sd-table sd-table--align-middle">
+		<table class="sd-matrix__table sd-table sd-table--align-middle sd-table--columnsautowidth">
 			<thead>
 				<tr>
 					<td>
