--- a/tests/markup/snapshots/panel-required-header.snap.html
+++ b/tests/markup/snapshots/panel-required-header.snap.html
@@ -7,7 +7,7 @@
 				<span aria-hidden="true" class="sd-panel__required-text">*</span>
 			</h4>
 		</div>
-		<div class="sd-panel__content" id="testidp0_content">
+		<div class="sd-element__content sd-panel__content" id="testidp0_content">
 			<div class="sd-clearfix sd-row">
 				<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 					<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="question1" id="testid0">
