#6776 - fixed markup tests

--- a/tests/markup/snapshots/file-2-zip.snap.html
+++ b/tests/markup/snapshots/file-2-zip.snap.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
+			<span class="sd-file__preview-item">
 				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
 					<svg class="sd-file__default-image sv-svg-icon" role="img">
 						<use xlink:href="#icon-defaultfile" class="">
