--- a/tests/markup/snapshots/file-modern-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-modern-zip-png-ro.snap.html
@@ -9,14 +9,14 @@
 			</div>
 		</div>
 		<div>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 				</div>
 				<div class="sv-file__sign">
 					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 				</div>
 			</span>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 					<img alt="File preview" src="#item2.png">
 					</div>
