--- a/tests/markup/snapshots/file-modern-zip-png.snap.html
+++ b/tests/markup/snapshots/file-modern-zip-png.snap.html
@@ -15,7 +15,7 @@
 			<span>Clear</span>
 		</button>
 		<div>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 					<div>
 						<span class="sv-hidden">Remove this file</span>
@@ -30,7 +30,7 @@
 					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 				</div>
 			</span>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 					<img alt="File preview" src="#item2.png">
 						<div>
