--- a/tests/markup/snapshots/file-modern-zip.snap.html
+++ b/tests/markup/snapshots/file-modern-zip.snap.html
@@ -15,7 +15,7 @@
 			<span>Clear</span>
 		</button>
 		<div>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 					<div>
 						<span class="sv-hidden">Remove this file</span>
