--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
+			<span class="sd-file__preview-item">
 				<div class="sd-file__image-wrapper">
 					<img alt="File preview" src="#item1.png">
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
