--- a/tests/markup/snapshots/file-mob2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png.snap.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
+			<span class="sd-file__preview-item">
 				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
 					<svg class="sd-file__default-image sv-svg-icon" role="img">
 						<use xlink:href="#icon-defaultfile" class="">
@@ -64,7 +64,7 @@
 					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 				</div>
 			</span>
-			<span class="sd-file__preview" style="display:none;">
+			<span class="sd-file__preview-item" style="display:none;">
 				<div class="sd-file__image-wrapper">
 					<img alt="File preview" src="#item2.png">
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
