--- a/tests/markup/snapshots/file-modern-png.snap.html
+++ b/tests/markup/snapshots/file-modern-png.snap.html
@@ -15,7 +15,7 @@
 			<span>Clear</span>
 		</button>
 		<div>
-			<span class="sv-file__preview">
+			<span class="sd-file__preview-item">
 				<div>
 					<img alt="File preview" src="#item1.png">
 						<div>
