#8094 fixed angular and markup tests Fixes #8094

--- a/tests/markup/snapshots/signaturepad-readonly.snap.html
+++ b/tests/markup/snapshots/signaturepad-readonly.snap.html
@@ -3,7 +3,7 @@
 		<span class="sv-string-viewer sv-string-viewer--multiline">No signature</span>
 	</div>
 	<div>
-		<canvas class="sjs_sp_canvas" height="200" style="touch-action:auto; user-select:auto; width:300px;" tabindex="-1" width="300">
+		<canvas class="sjs_sp_canvas" height="200" style="user-select:auto; width:300px;" tabindex="-1" width="300">
 		</canvas>
 	</div>
 </div>
