#6776 - fix markup tests

--- a/tests/markup/snapshots/file-2.snap.html
+++ b/tests/markup/snapshots/file-2.snap.html
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 				</div>
-				<span class="sd-description sd-file__no-file-chosen">No file chosen</span>
+				<span class="sd-description sd-file__no-file-chosen">No file selected</span>
 			</div>
 		</div>
 	</div>
