--- a/tests/markup/snapshots/file-camera.snap.html
+++ b/tests/markup/snapshots/file-camera.snap.html
@@ -9,7 +9,7 @@
 				<label aria-label="Select File" class="sv_q_file_choose_button" for="testid0i" tabindex="0">
 					<span>Select File</span>
 				</label>
-				<span class="sv_q_file_placeholder">No file chosen</span>
+				<span class="sv_q_file_placeholder">No file selected</span>
 			</div>
 		</div>
 	</div>
