--- a/tests/markup/snapshots/file-modern.snap.html
+++ b/tests/markup/snapshots/file-modern.snap.html
@@ -9,7 +9,7 @@
 				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" for="testid0i" tabindex="0">
 					<span>Select File</span>
 				</label>
-				<span class="sv-description sv-file__no-file-chosen">No file chosen</span>
+				<span class="sv-description sv-file__no-file-chosen">No file selected</span>
 			</div>
 		</div>
 	</div>
