--- a/tests/markup/snapshots/file-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-zip-png-ro.snap.html
@@ -3,7 +3,7 @@
 	<div>
 		<div class="sv-file__decorator">
 			<span class="sv-hidden">
-				<span class="sv-string-viewer">No file chosen</span>
+				<span class="sv-string-viewer">No file selected</span>
 			</span>
 			<div>
 			</div>
