Implement animations in PanelDynamic

--- a/tests/markup/snapshots/paneldynamic-list-legacy-navigation.snap.html
+++ b/tests/markup/snapshots/paneldynamic-list-legacy-navigation.snap.html
@@ -1,10 +1,14 @@
 <div class="sv_panel_dynamic">
-	<div class="sv_p_wrapper">
-	</div>
-	<hr>
+	<div>
 		<div class="sv_p_wrapper">
 		</div>
+		<hr>
+			<div class="sv_p_wrapper">
+			</div>
+		</div>
 		<button class="sv-paneldynamic__add-btn sv-paneldynamic__add-btn--list-mode" type="button">
-			<span><span class="sv-string-viewer">Add new</span></span>
+			<span>
+				<span class="sv-string-viewer">Add new</span>
+			</span>
 		</button>
 	</div>
