--- a/tests/markup/snapshots/paneldynamic-list.snap.html
+++ b/tests/markup/snapshots/paneldynamic-list.snap.html
@@ -1,8 +1,10 @@
 <div class="sd-paneldynamic">
-	<div class="sd-paneldynamic__panel-wrapper">
-	</div>
-	<hr class="sd-paneldynamic__separator">
-		<div class="sd-paneldynamic__panel-wrapper">
+	<div class="sd-paneldynamic__panels-container">
+		<div class="sd-paneldynamic__panel-wrapper sd-paneldynamic__panel-wrapper--list">
+		</div>
+		<hr class="sd-paneldynamic__separator">
+			<div class="sd-paneldynamic__panel-wrapper sd-paneldynamic__panel-wrapper--list">
+			</div>
 		</div>
 		<div class="sd-paneldynamic__footer">
 			<hr class="sd-paneldynamic__separator">
@@ -25,7 +27,9 @@
 						<div class="sv-action" id="sv-pd-add-btn">
 							<div class="sv-action__content">
 								<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" type="button">
-									<span><span class="sv-string-viewer">Add new</span></span>
+									<span>
+										<span class="sv-string-viewer">Add new</span>
+									</span>
 								</button>
 							</div>
 						</div>
