--- a/tests/markup/snapshots/paneldynamic-progress-bottom.snap.html
+++ b/tests/markup/snapshots/paneldynamic-progress-bottom.snap.html
@@ -1,10 +1,12 @@
 <div class="sd-paneldynamic">
-	<div class="sd-paneldynamic__panel-wrapper">
+	<div class="sd-paneldynamic__panels-container">
+		<div class="sd-paneldynamic__panel-wrapper">
+		</div>
 	</div>
 	<div class="sd-paneldynamic__footer">
 		<hr class="sd-paneldynamic__separator">
 			<div class="sd-progress">
-				<div class="sd-progress__bar" role="progressbar" style="width: 50%;">
+				<div class="sd-progress__bar" role="progressbar" style="width:50%;">
 				</div>
 			</div>
 			<div class="sd-paneldynamic__buttons-container">
