--- a/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
@@ -2,27 +2,29 @@
 	<div aria-invalid="false" aria-required="false" class="sd-element sd-element--complex sd-element--with-frame sd-question sd-question--complex sd-question--paneldynamic sd-row__question" data-name="pd" id="testid0" role="textbox">
 		<div class="sd-element__content sd-question__content" role="presentation">
 			<div class="sd-paneldynamic">
-				<div class="sd-paneldynamic__panel-wrapper sd-paneldynamic__panel-wrapper--in-row">
-					<div class="sd-element sd-element--complex sd-panel sd-row__panel" id="testid0panel0">
-						<div class="sd-element__content sd-panel__content" id="testid0panel0_content">
-							<div class="sd-clearfix sd-row">
-								<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
-									<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="q1" id="testid0panel0question0">
-										<div class="sd-question__content sd-text__content" role="presentation">
-											<input aria-invalid="false" aria-label="q1" aria-required="false" class="sd-input sd-text" id="testid0panel0question0i" placeholder="" type="text">
+				<div class="sd-paneldynamic__panels-container">
+					<div class="sd-paneldynamic__panel-wrapper sd-paneldynamic__panel-wrapper--in-row sd-paneldynamic__panel-wrapper--list">
+						<div class="sd-element sd-element--complex sd-panel sd-row__panel" id="testid0panel0">
+							<div class="sd-element__content sd-panel__content" id="testid0panel0_content">
+								<div class="sd-clearfix sd-row">
+									<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
+										<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="q1" id="testid0panel0question0">
+											<div class="sd-question__content sd-text__content" role="presentation">
+												<input aria-invalid="false" aria-label="q1" aria-required="false" class="sd-input sd-text" id="testid0panel0question0i" placeholder="" type="text">
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+						<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
+							<span>
+								<span class="sv-string-viewer">Remove</span>
+							</span>
+							<span class="sd-hidden">
+							</span>
+						</button>
 					</div>
-					<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
-						<span>
-							<span class="sv-string-viewer">Remove</span>
-						</span>
-						<span class="sd-hidden">
-						</span>
-					</button>
 				</div>
 				<div class="sd-paneldynamic__footer">
 					<hr class="sd-paneldynamic__separator">
