--- a/tests/markup/snapshots/paneldynamic-progress-bottom-legacy-navigation.snap.html
+++ b/tests/markup/snapshots/paneldynamic-progress-bottom-legacy-navigation.snap.html
@@ -1,8 +1,10 @@
 <div class="sv_panel_dynamic">
-	<div class="sv_p_wrapper">
+	<div>
+		<div class="sv_p_wrapper">
+		</div>
 	</div>
 	<div>
-		<div style="clear: both;">
+		<div style="clear:both;">
 			<div class="sv-paneldynamic__progress-container">
 				<div class="sv-paneldynamic__prev-btn sv-paneldynamic__prev-btn--disabled" title="Previous">
 					<svg class="sv-svg-icon" role="img">
@@ -11,7 +13,7 @@
 					</svg>
 				</div>
 				<div class="sv-progress">
-					<div class="sv-progress__bar" role="progressbar" style="width: 50%;">
+					<div class="sv-progress__bar" role="progressbar" style="width:50%;">
 					</div>
 				</div>
 				<div class="sv-paneldynamic__next-btn" title="Next">
@@ -22,7 +24,9 @@
 				</div>
 			</div>
 			<button class="sv-paneldynamic__add-btn" type="button">
-				<span><span class="sv-string-viewer">Add new</span></span>
+				<span>
+					<span class="sv-string-viewer">Add new</span>
+				</span>
 			</button>
 			<div class="sv-paneldynamic__progress-text">1 of 2</div>
 		</div>
