--- a/tests/markup/snapshots/paneldynamic-progress-top.snap.html
+++ b/tests/markup/snapshots/paneldynamic-progress-top.snap.html
@@ -1,9 +1,11 @@
 <div class="sd-paneldynamic">
 	<div class="sd-progress">
-		<div class="sd-progress__bar" role="progressbar" style="width: 50%;">
+		<div class="sd-progress__bar" role="progressbar" style="width:50%;">
 		</div>
 	</div>
-	<div class="sd-paneldynamic__panel-wrapper">
+	<div class="sd-paneldynamic__panels-container">
+		<div class="sd-paneldynamic__panel-wrapper">
+		</div>
 	</div>
 	<div class="sd-paneldynamic__footer">
 		<hr class="sd-paneldynamic__separator">
