--- a/tests/markup/snapshots/rating-stars.snap.html
+++ b/tests/markup/snapshots/rating-stars.snap.html
@@ -3,7 +3,7 @@
 		<legend class="sv-hidden" role="presentation">
 		</legend>
 		<label class="sv_q_rating__item-star">
-			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_0" name="name" type="radio" value="1">
+			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="1">
 			<svg class="sv-star sv-svg-icon" role="img">
 				<use xlink:href="#icon-rating-star" class="">
 				</use>
@@ -16,7 +16,7 @@
 			</svg>
 		</label>
 		<label class="sv_q_rating__item-star">
-			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_1" name="name" type="radio" value="2">
+			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_1" name="name_testid0" type="radio" value="2">
 			<svg class="sv-star sv-svg-icon" role="img">
 				<use xlink:href="#icon-rating-star" class="">
 				</use>
