Updated markup test etalon

--- a/tests/markup/snapshots/boolean-value-v2.snap.html
+++ b/tests/markup/snapshots/boolean-value-v2.snap.html
@@ -4,10 +4,9 @@
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label sd-boolean__label--false sd-checkbox__label--disabled">
 				<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
-			</span>
-		</div>
-		<div class="sd-boolean__switch">
-			<span class="sd-boolean__thumb">
+				</span>
+			</div>
+			<div class="sd-boolean__switch"><span class="sd-boolean__thumb" style="margin-left:2px;">
 				<span class="sd-boolean__thumb-text">
 					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
