Try to fix tests

--- a/tests/markup/snapshots/boolean-value-v2.snap.html
+++ b/tests/markup/snapshots/boolean-value-v2.snap.html
@@ -6,7 +6,7 @@
 				<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 				</span>
 			</div>
-			<div class="sd-boolean__switch"><span class="sd-boolean__thumb" style="margin-left:2px;">
+			<div class="sd-boolean__switch"><span class="sd-boolean__thumb">
 				<span class="sd-boolean__thumb-text">
 					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
