--- a/tests/markup/snapshots/checkbox-disabled.snap.html
+++ b/tests/markup/snapshots/checkbox-disabled.snap.html
@@ -2,25 +2,25 @@
 	<legend class="sv-hidden">Question title</legend>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameitem1" readonly="" role="option" type="checkbox" value="item1">
+			<input class="sv_q_checkbox_control_item" disabled="" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
 			<span class="sv_q_checkbox_control_label">
-				<span class="sv-string-viewer">item1</span>
+				<span class="sv-string-editor" contenteditable="true">item1</span>
 			</span>
 		</label>
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem2" readonly="" role="option" type="checkbox" value="item2">
+			<input class="sv_q_checkbox_control_item" disabled="" id="testid0i_1" name="nameitem2" role="option" type="checkbox" value="item2">
 			<span class="sv_q_checkbox_control_label">
-				<span class="sv-string-viewer">item2</span>
+				<span class="sv-string-editor" contenteditable="true">item2</span>
 			</span>
 		</label>
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_2" name="nameitem3" readonly="" role="option" type="checkbox" value="item3">
+			<input class="sv_q_checkbox_control_item" disabled="" id="testid0i_2" name="nameitem3" role="option" type="checkbox" value="item3">
 			<span class="sv_q_checkbox_control_label">
-				<span class="sv-string-viewer">item3</span>
+				<span class="sv-string-editor" contenteditable="true">item3</span>
 			</span>
 		</label>
 	</div>
