--- a/tests/markup/snapshots/radiogroup-readonly-selected.snap.html
+++ b/tests/markup/snapshots/radiogroup-readonly-selected.snap.html
@@ -1,7 +1,7 @@
 <fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc" role="radiogroup">
 	<div class="checked sv_q_radiogroup sv-q-col-1" role="presentation">
 		<label class="sv_q_radiogroup_label">
-			<input checked="" class="sv_q_radiogroup_control_item" disabled="" id="testid0i_0" name="name_testid0" type="radio" value="item1">
+			<input checked="" class="sv_q_radiogroup_control_item" id="testid0i_0" name="name_testid0" readonly="" type="radio" value="item1">
 			<span>
 				<span class="sv-string-viewer">item1</span>
 			</span>
@@ -9,7 +9,7 @@
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-1" role="presentation">
 		<label class="sv_q_radiogroup_label">
-			<input class="sv_q_radiogroup_control_item" disabled="" id="testid0i_1" name="name_testid0" type="radio" value="item2">
+			<input class="sv_q_radiogroup_control_item" id="testid0i_1" name="name_testid0" readonly="" type="radio" value="item2">
 			<span>
 				<span class="sv-string-viewer">item2</span>
 			</span>
@@ -17,7 +17,7 @@
 	</div>
 	<div class="sv_q_radiogroup sv-q-col-1" role="presentation">
 		<label class="sv_q_radiogroup_label">
-			<input class="sv_q_radiogroup_control_item" disabled="" id="testid0i_2" name="name_testid0" type="radio" value="item3">
+			<input class="sv_q_radiogroup_control_item" id="testid0i_2" name="name_testid0" readonly="" type="radio" value="item3">
 			<span>
 				<span class="sv-string-viewer">item3</span>
 			</span>
