--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
     <li><a href="/examples/angular">Angular</a></li>
     <li><a href="/examples/jquery">JQuery</a></li>
+    <li><a href="/examples/jquery-ui">JQuery UI</a></li>
     <li><a href="/examples/knockout">KnockoutJS</a></li>
     <li><a href="/examples/react">React</a></li>
     <li><a href="/examples/vue">Vue</a></li>
