work for the https://github.com/surveyjs/survey-library/issues/8245

--- a/examples/jquery-ui/index.html
+++ b/examples/jquery-ui/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="../../build/survey-jquery-ui/modern.css" /> -->
     <link rel="stylesheet" href="../../build/survey-jquery-ui/defaultV2.css" />
     <script src="../../build/survey-core/survey.core.js"></script>
-    <script src="../../build/survey-jquery-ui/survey.jquery.js"></script>
+    <script src="../../build/survey-jquery-ui/survey.jquery.ui.js"></script>
   </head>
 
   <body>
