#8209 - tagbox and dropdown

--- a/tests/markup/snapshots/dropdown-readonly-with-value.snap.html
+++ b/tests/markup/snapshots/dropdown-readonly-with-value.snap.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="sv_select_wrapper">
-		<div class="sv_q_dropdown_control" disabled="" id="testid0i">
+		<div aria-label="Question title" class="sv_q_dropdown_control" id="testid0i" tabindex="0">
 			<span class="sv-string-viewer">item1</span>
 			<div>
 			</div>
