--- a/tests/markup/snapshots/rating-as-dropdown-readonly-with-value.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown-readonly-with-value.snap.html
@@ -1,6 +1,6 @@
 <div class="sd-scrollable-container sd-scrollable-container--compact sd-selectbase">
 	<div class="sv-dropdown_select-wrapper">
-		<div class="sd-dropdown sd-input sd-input--readonly" disabled="" id="testid0i">
+		<div aria-label="Question title" class="sd-dropdown sd-input sd-input--readonly" id="testid0i" tabindex="0">
 			<div>3</div>
 		</div>
 		<div aria-hidden="true" class="sd-dropdown_chevron-button">
