--- a/tests/markup/snapshots/tagbox-readonly-with-value.snap.html
+++ b/tests/markup/snapshots/tagbox-readonly-with-value.snap.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="sv_q_tagbox_wrapper sv_select_wrapper">
-		<div class="sv_q_dropdown_control sv_q_input sv_q_tagbox" disabled="" id="testid0i">
+		<div aria-label="Question title" class="sv_q_dropdown_control sv_q_input sv_q_tagbox" id="testid0i" tabindex="0">
 			<span class="sv-string-viewer">item1, item3</span>
 		</div>
 	</div>
