Fix markup tests

--- a/tests/markup/snapshots/file-2-zip.snap.html
+++ b/tests/markup/snapshots/file-2-zip.snap.html
@@ -45,16 +45,11 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview-item">
-				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
-					<svg class="sd-file__default-image sv-svg-icon" role="img">
-						<use xlink:href="#icon-defaultfile" class="">
-						</use>
-					</svg>
-					<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
-						<span class="sd-hidden">Remove this file</span>
-						<svg class="sv-svg-icon" role="img">
-							<use xlink:href="#icon-delete" class="">
+			<div class="sd-file__page" id="sv_sfp_15">
+				<span class="sd-file__preview-item">
+					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
+						<svg class="sd-file__default-image sv-svg-icon" role="img">
+							<use xlink:href="#icon-defaultfile" class="">
 							</use>
 						</svg>
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
