--- a/tests/markup/snapshots/file-2-zip-png-file-navigator.snap.html
+++ b/tests/markup/snapshots/file-2-zip-png-file-navigator.snap.html
@@ -45,27 +45,13 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview-item">
-				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
-					<svg class="sd-file__default-image sv-svg-icon" role="img">
-						<use xlink:href="#icon-defaultfile" class="">
-						</use>
-					</svg>
-					<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
-						<span class="sd-hidden">Remove this file</span>
-						<svg class="sv-svg-icon" role="img">
-							<use xlink:href="#icon-delete" class="">
+			<div class="sd-file__page" id="sv_sfp_27">
+				<span class="sd-file__preview-item">
+					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
+						<svg class="sd-file__default-image sv-svg-icon" role="img">
+							<use xlink:href="#icon-defaultfile" class="">
 							</use>
 						</svg>
-					</div>
-				</div>
-				<div class="sd-file__sign">
-					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
-				</div>
-			</span>
-			<span class="sd-file__preview-item" style="display:none;">
-				<div class="sd-file__image-wrapper">
-					<img alt="File preview" src="#item2.png">
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
 							<span class="sd-hidden">Remove this file</span>
 							<svg class="sv-svg-icon" role="img">
@@ -80,53 +66,35 @@
 					</div>
 				</span>
 			</div>
-			<div class="sd-file__page sd-file__page--hidden">
-				<span class="sd-file__preview">
-					<div class="sd-file__image-wrapper">
-						<img alt="File preview" src="#item2.png">
-							<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
-								<span class="sd-hidden">Remove this file</span>
-								<svg class="sv-svg-icon" role="img">
-									<use xlink:href="#icon-delete" class="">
-									</use>
-									<title class="">Remove this file</title>
-								</svg>
-							</div>
-						</div>
-						<div class="sd-file__sign">
-							<a download="item2.png" href="#item2.png" title="item2.png">item2.png</a>
-						</div>
-					</span>
+		</div>
+		<div class="sv-action-bar sv-action-bar--default-size-mode">
+			<div class="sv-action" id="prevPage">
+				<div class="sv-action__content">
+					<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
+						<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
+							<use xlink:href="#icon-arrowleft" class="">
+							</use>
+						</svg>
+					</button>
 				</div>
 			</div>
-			<div class="sv-action-bar sv-action-bar--default-size-mode">
-				<div class="sv-action" id="prevPage">
-					<div class="sv-action__content">
-						<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
-							<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
-								<use xlink:href="#icon-arrowleft" class="">
-								</use>
-							</svg>
-						</button>
-					</div>
+			<div class="sv-action" id="fileIndex">
+				<div class="sv-action__content">
+					<button class="sv-action-bar-item" disabled="" role="button" tabindex="0" title="1 of 2" type="button">
+						<span class="sv-action-bar-item__title">1 of 2</span>
+					</button>
 				</div>
-				<div class="sv-action" id="fileIndex">
-					<div class="sv-action__content">
-						<button class="sv-action-bar-item" disabled="" role="button" tabindex="0" title="1 of 2" type="button">
-							<span class="sv-action-bar-item__title">1 of 2</span>
-						</button>
-					</div>
-				</div>
-				<div class="sv-action" id="nextPage">
-					<div class="sv-action__content">
-						<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
-							<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
-								<use xlink:href="#icon-arrowright" class="">
-								</use>
-							</svg>
-						</button>
-					</div>
+			</div>
+			<div class="sv-action" id="nextPage">
+				<div class="sv-action__content">
+					<button class="sv-action-bar-item sv-action-bar-item--icon" role="button" tabindex="0" type="button">
+						<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:16px; width:16px;">
+							<use xlink:href="#icon-arrowright" class="">
+							</use>
+						</svg>
+					</button>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
