--- a/tests/markup/snapshots/file-2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-2-zip-png-ro.snap.html
@@ -45,26 +45,19 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview-item">
-				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
-					<svg class="sd-file__default-image sv-svg-icon" role="img">
-						<use xlink:href="#icon-defaultfile" class="">
-						</use>
-					</svg>
-				</div>
-				<div class="sd-file__sign">
-					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
-				</div>
-			</span>
-			<span class="sd-file__preview-item">
-				<div class="sd-file__image-wrapper">
-					<img alt="File preview" src="#item2.png">
+			<div class="sd-file__page" id="sv_sfp_33">
+				<span class="sd-file__preview-item">
+					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
+						<svg class="sd-file__default-image sv-svg-icon" role="img">
+							<use xlink:href="#icon-defaultfile" class="">
+							</use>
+						</svg>
 					</div>
 					<div class="sd-file__sign">
 						<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 					</div>
 				</span>
-				<span class="sd-file__preview">
+				<span class="sd-file__preview-item">
 					<div class="sd-file__image-wrapper">
 						<img alt="File preview" src="#item2.png">
 						</div>
