Fix angular markup tests + run id changes after init survey in markup tests

--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<div class="sd-file__page" id="sv_sfp_37">
+			<div class="sd-file__page" id="testid0page0">
 				<span class="sd-file__preview-item">
 					<div class="sd-file__image-wrapper">
 						<img alt="File preview" src="#item1.png">
