--- a/tests/markup/snapshots/file-2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-2-zip-png.snap.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<div class="sd-file__page" id="sv_sfp_22">
+			<div class="sd-file__page" id="testid0page0">
 				<span class="sd-file__preview-item">
 					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
 						<svg class="sd-file__default-image sv-svg-icon" role="img">
