--- a/tests/markup/snapshots/imagepicker-readonly.snap.html
+++ b/tests/markup/snapshots/imagepicker-readonly.snap.html
@@ -2,38 +2,28 @@
 	<legend class="sv-hidden">question1</legend>
 	<div class="sv_q_imagepicker_inline sv_q_imgsel">
 		<label class="sv_q_imgsel_label">
-			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_imgsel_control_item" disabled="" id="testid0i_0" name="question1_testid0" readonly="" type="radio" value="item1">
+			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_imgsel_control_item" id="testid0i_0" name="question1_testid0" readonly="" type="radio" value="item1">
 			<div>
 				<div>
-					<div class="sv_q_imgsel__no-image" style="height:150px; object-fit:contain; width:200px;">
-						<svg class="sv_q_imgsel__no-image-svg sv-svg-icon" role="img" style="height:48px; width:48px;">
-							<use xlink:href="#icon-no-image" class="">
-							</use>
-						</svg>
+					<img alt="item1" class="sv_q_imgsel_image" height="150" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" style="object-fit:contain;" width="200">
 					</div>
+					<span class="sv_q_imgsel_text">
+						<span class="sv-string-viewer">item1</span>
+					</span>
 				</div>
-				<span class="sv_q_imgsel_text">
-					<span class="sv-string-viewer">item1</span>
-				</span>
-			</div>
-		</label>
-	</div>
-	<div class="sv_q_imagepicker_inline sv_q_imgsel">
-		<label class="sv_q_imgsel_label">
-			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_imgsel_control_item" disabled="" id="testid0i_1" name="question1_testid0" readonly="" type="radio" value="item2">
-			<div>
+			</label>
+		</div>
+		<div class="sv_q_imagepicker_inline sv_q_imgsel">
+			<label class="sv_q_imgsel_label">
+				<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_imgsel_control_item" id="testid0i_1" name="question1_testid0" readonly="" type="radio" value="item2">
 				<div>
-					<div class="sv_q_imgsel__no-image" style="height:150px; object-fit:contain; width:200px;">
-						<svg class="sv_q_imgsel__no-image-svg sv-svg-icon" role="img" style="height:48px; width:48px;">
-							<use xlink:href="#icon-no-image" class="">
-							</use>
-						</svg>
+					<div>
+						<img alt="item2" class="sv_q_imgsel_image" height="150" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" style="object-fit:contain;" width="200">
+						</div>
+						<span class="sv_q_imgsel_text">
+							<span class="sv-string-viewer">item2</span>
+						</span>
 					</div>
-				</div>
-				<span class="sv_q_imgsel_text">
-					<span class="sv-string-viewer">item2</span>
-				</span>
+				</label>
 			</div>
-		</label>
-	</div>
-</fieldset>
+		</fieldset>
