work for the https://github.com/surveyjs/survey-library/issues/8209(file)

--- a/tests/markup/snapshots/file-2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-2-zip-png-ro.snap.html
@@ -1,5 +1,5 @@
 <div class="sd-file sd-file--answered sd-file--readonly">
-	<input class="form-control sd-visuallyhidden" disabled="" id="testid0i" multiple="" placeholder="Question title" style="color:transparent;" type="file">
+	<input class="form-control sd-visuallyhidden" id="testid0i" multiple="" placeholder="Question title" readonly="" style="color:transparent;" type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
 			<span class="sd-file__drag-area-placeholder">
