--- a/tests/markup/snapshots/file-single-zip-ro.snap.html
+++ b/tests/markup/snapshots/file-single-zip-ro.snap.html
@@ -1,5 +1,5 @@
 <div class="sv_q_file">
-	<input class="form-control sv-visuallyhidden" disabled="" id="testid0i" placeholder="Question title" style="color:transparent;" type="file">
+	<input class="form-control sv-visuallyhidden" id="testid0i" placeholder="Question title" readonly="" style="color:transparent;" type="file">
 	<div>
 		<div class="sv-file__decorator">
 			<span class="sv-hidden">
