--- a/examples/jquery-ui/index.html
+++ b/examples/jquery-ui/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <title>Welcome to JQuery</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.22.0/preact.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
