--- a/examples_test/default/jquery-ui.html
+++ b/examples_test/default/jquery-ui.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.22.0/preact.min.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.6.4/showdown.min.js"></script>
