work for the https://github.com/surveyjs/survey-library/issues/8245

--- a/examples_test/default/jquery-ui.html
+++ b/examples_test/default/jquery-ui.html
@@ -10,6 +10,7 @@
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
     <script src="../../build/survey-jquery-ui/survey.jquery.ui.min.js"></script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <div id="surveyElement"></div>
