--- a/examples_test/bootstrap/jquery-ui.html
+++ b/examples_test/bootstrap/jquery-ui.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
     
     <script src="../../build/survey-core/survey.core.min.js"></script>
+    <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script>
     <script src="../../build/survey-jquery-ui/survey.jquery.ui.min.js"></script>
   </head>
   <body>
