--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -48,10 +48,10 @@
 			<span class="sd-file__preview-item">
 				<div class="sd-file__image-wrapper">
 					<img alt="File preview" src="#item1.png">
-						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
+						<div class="sd-context-btn sd-context-btn--colorful sd-context-btn--negative sd-context-btn--small sd-context-btn--with-border sd-file__remove-file-button">
 							<span class="sd-hidden">Remove this file</span>
 							<svg class="sv-svg-icon" role="img">
-								<use xlink:href="#icon-delete" class="">
+								<use xlink:href="#icon-close_16x16" class="">
 								</use>
 								<title class="">Remove this file</title>
 							</svg>
