--- a/examples_test/default/jquery-ui.html
+++ b/examples_test/default/jquery-ui.html
@@ -10,7 +10,7 @@
 
     <script src="../../build/survey-core/survey.core.min.js"></script>
     <script src="../../build/survey-core/plugins/bootstrap-integration.js"></script>
-    <script src="../../build/survey-jquery-ui/survey.jquery.ui.min.js"></script>
+    <script src="../../build/survey-jquery-ui/survey-jquery-ui.min.js"></script>
     <script src="./index.js"></script>
   </head>
   <body>
