Resolved #8356 - 'Freeze the progress bar' option or make it a default behavior

--- a/tests/markup/snapshots/survey-navigation.snap.html
+++ b/tests/markup/snapshots/survey-navigation.snap.html
@@ -18,7 +18,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="sv-components-column">
+				<div class="sv-components-column sv-components-container-contentBottom">
 					<div class="sv_nav sv-action-bar sv-action-bar--default-size-mode">
 						<div class="sv-action" id="custom-action">
 							<div class="sv-action__content">
