Implement spans with responsive titles instead of :before element

--- a/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
+++ b/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
@@ -11,40 +11,40 @@
 		</thead>
 		<tbody>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row1">
-				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 0-4" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Age 0-4</span>
 				</td>
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
+				<td class="sv_matrix_cell" colspan="1" title="Number of people">
 					<div>
 						<input aria-invalid="false" aria-label="row Age 0-4, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row1cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row3">
-				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 5-11" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Age 5-11</span>
 				</td>
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
+				<td class="sv_matrix_cell" colspan="1" title="Number of people">
 					<div>
 						<input aria-invalid="false" aria-label="row Age 5-11, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row3cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row5">
-				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 12-15" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Age 12-15</span>
 				</td>
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
+				<td class="sv_matrix_cell" colspan="1" title="Number of people">
 					<div>
 						<input aria-invalid="false" aria-label="row Age 12-15, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row5cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row7">
-				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 16+" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Age 16+</span>
 				</td>
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
+				<td class="sv_matrix_cell" colspan="1" title="Number of people">
 					<div>
 						<input aria-invalid="false" aria-label="row Age 16+, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row7cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
