--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -13,19 +13,19 @@
 		</thead>
 		<tbody>
 			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row0">
-				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="row1" title="">
+				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">row1</span>
 				</td>
-				<td class="sd-question--error sd-table__cell" colspan="1" data-responsive-title="col1" title="col1">
+				<td class="sd-question--error sd-table__cell" colspan="1" title="col1">
 					<div class="sd-table__question-wrapper">
 						<input aria-errormessage="testid0row0cell1_errors" aria-invalid="true" aria-label="row row1, column col1" aria-required="true" autocomplete="" class="sd-input sd-input--error sd-text" id="testid0row0cell1i" placeholder="" type="text">
 					</div>
 				</td>
 			</tr>
 			<tr class="sd-table__row">
-				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--error" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--error" colspan="1" title="">
 				</td>
-				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-bottom" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-bottom" colspan="1" title="">
 					<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0row0cell1_errors" role="alert">
 						<div>
 							<span aria-hidden="true">
