--- a/tests/markup/snapshots/matrixdynamic-default.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-default.snap.html
@@ -18,7 +18,7 @@
 			</thead>
 			<tbody>
 				<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row1">
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sv_matrix_cell" colspan="1" title="Column 1">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -57,7 +57,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 2" title="Column 2">
+					<td class="sv_matrix_cell" colspan="1" title="Column 2">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -96,7 +96,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 3" title="Column 3">
+					<td class="sv_matrix_cell" colspan="1" title="Column 3">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -135,7 +135,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
@@ -150,7 +150,7 @@
 					</td>
 				</tr>
 				<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row3">
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sv_matrix_cell" colspan="1" title="Column 1">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -189,7 +189,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 2" title="Column 2">
+					<td class="sv_matrix_cell" colspan="1" title="Column 2">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -228,7 +228,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 3" title="Column 3">
+					<td class="sv_matrix_cell" colspan="1" title="Column 3">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -267,7 +267,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
