--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -18,12 +18,15 @@
 		</thead>
 		<tbody>
 			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
-				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="row1" title="">
+				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">row1</span>
 				</td>
-				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" title="">
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="col1" title="col1">
+				<td class="sd-table__cell" colspan="1" title="col1">
+					<span class="sd-table__responsive-title">
+						<span class="sv-string-viewer sv-string-viewer--multiline">col1</span>
+					</span>
 					<div class="sd-table__question-wrapper">
 						<fieldset aria-invalid="false" aria-label="row row1, column col1" aria-required="true" class="sd-selectbase sd-selectbase--row" role="radiogroup">
 							<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
@@ -39,9 +42,12 @@
 						</fieldset>
 					</div>
 				</td>
-				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" title="">
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="col2" title="col2">
+				<td class="sd-table__cell" colspan="1" title="col2">
+					<span class="sd-table__responsive-title">
+						<span class="sv-string-viewer sv-string-viewer--multiline">col2</span>
+					</span>
 					<div class="sd-table__question-wrapper">
 						<fieldset aria-invalid="false" aria-label="row row1, column col2" aria-required="true" class="sd-selectbase sd-selectbase--row" role="listbox">
 							<legend class="sv-hidden">row row1, column col2</legend>
