--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -12,7 +12,7 @@
 			</thead>
 			<tbody>
 				<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row1">
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sv_matrix_cell" colspan="1" title="Column 1">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -51,7 +51,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
 							<div class="sv-action">
 								<div class="sv-action__content">
@@ -66,7 +66,7 @@
 					</td>
 				</tr>
 				<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row3">
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sv_matrix_cell" colspan="1" title="Column 1">
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
 							<div class="sv-action">
 								<div class="sv-action__content">
@@ -122,12 +122,12 @@
 			</tbody>
 			<tfoot>
 				<tr>
-					<td class="sv_matrix_cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sv_matrix_cell" colspan="1" title="Column 1">
 						<div>
 							<div>Count: 0</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell_header sv_matrix_cell--action" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell_header sv_matrix_cell--action" colspan="1" title="">
 					</td>
 				</tr>
 			</tfoot>
