--- a/tests/markup/snapshots/matrixdropdown.snap.html
+++ b/tests/markup/snapshots/matrixdropdown.snap.html
@@ -16,30 +16,30 @@
 		</thead>
 		<tbody>
 			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
-				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="Row 1" title="">
+				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Row 1</span>
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell" colspan="1" title="">
 					<div class="sd-table__question-wrapper">
 						<input aria-invalid="false" aria-label="row Row 1, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell1i" placeholder="" type="text">
 					</div>
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell" colspan="1" title="">
 					<div class="sd-table__question-wrapper">
 						<input aria-invalid="false" aria-label="row Row 1, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell2i" placeholder="" type="text">
 					</div>
 				</td>
 			</tr>
 			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row3">
-				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="Row 2" title="">
+				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" title="">
 					<span class="sv-string-viewer">Row 2</span>
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell" colspan="1" title="">
 					<div class="sd-table__question-wrapper">
 						<input aria-invalid="false" aria-label="row Row 2, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell1i" placeholder="" type="text">
 					</div>
 				</td>
-				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
+				<td class="sd-table__cell" colspan="1" title="">
 					<div class="sd-table__question-wrapper">
 						<input aria-invalid="false" aria-label="row Row 2, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell2i" placeholder="" type="text">
 					</div>
