--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -18,7 +18,7 @@
 			</thead>
 			<tbody>
 				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row1">
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sd-table__cell" colspan="1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 2" title="Column 2">
+					<td class="sd-table__cell" colspan="1" title="Column 2">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -108,7 +108,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 3" title="Column 3">
+					<td class="sd-table__cell" colspan="1" title="Column 3">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -153,7 +153,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
@@ -170,7 +170,7 @@
 					</td>
 				</tr>
 				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row3">
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
+					<td class="sd-table__cell" colspan="1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -215,7 +215,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 2" title="Column 2">
+					<td class="sd-table__cell" colspan="1" title="Column 2">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -260,7 +260,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 3" title="Column 3">
+					<td class="sd-table__cell" colspan="1" title="Column 3">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
@@ -305,7 +305,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
